<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nutricev</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Inicio</item>
        <item >I.M.C.</item>
        <item >Peso Ideal</item>
        <item >Peso Corregido</item>
        <item >Gasto Energético Basal</item>
        <item >ETA</item>
        <item >Actividad Fisica</item>
        <item >Gasto Energético Total</item>
        <item >Alimentos</item>
        <item >Calculos</item>
        <item >Créditos</item>
        <item >Salir</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_inicio</item>
        <item>@drawable/ic_imc</item>
        <item>@drawable/ic_ge</item>
        <item>@drawable/ic_peso_corregido</item>
        <item>@drawable/ic_peso_ideal</item>
        <item>@drawable/ic_geb_eta</item>
        <item>@drawable/ic_actividad_fisica</item>
        <item>@drawable/ic_get</item>
        <item>@drawable/ic_alimentos</item>
        <item>@drawable/ic_calculos</item>
        <item>@drawable/ic_creditos</item>
        <item>@drawable/ic_salir</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="imc">I.M.C</string>
    <string name="peso">Peso</string>
    <string name="kg">Kg</string>
    <string name="m">m</string>
    <string name="talla">Talla</string>
    <string name="calcular">Calcular</string>
    <string name="peso_ideal">Peso Ideal</string>
    <string name="peso_actual">Peso Actual</string>
    <string name="peso_corregido">Peso Corregido</string>
    <string name="gasto_energetico_basal">Gasto Energético Basal</string>
    <string name="edad">Edad</string>
    <string name="calcular_hombre">Calcular Hombre</string>
    <string name="calcular_mujer">Calcular Mujer</string>
    <string name="annos">Años</string>
    <string name="geb_eta">GEB y ETA</string>
    <string name="eta">ETA</string>
    <string name="porcentaje">%</string>
    <string name="actividad_fisica">Actividad Fisica</string>
    <string name="get">Gasto Energético Total</string>
    <string name="cm">cm</string>
    <string name="creditos">Créditos</string>
    <string name="creds">Los créditos de este proyecto se le otorgan a la ISC Daniela Bracamontes López, Ingeniero en Software Juan Manuel Martínez Cabrera como Desarrollador de la aplicación, a los Licenciados en Nutrición Evelyn Córtes Castro y Julio Cesar García Serrano por las consultas necesarias para la investigación de este proyecto.</string>

</resources>
