<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="22dp"
        android:src="@drawable/ic_peso_corregido" />

    <TextView
        android:id="@+id/textView_al_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/peso_corregido"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_li_nom_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="22dp"
        android:text="@string/peso_actual"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_PA_PC"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView_li_nom_2"
        android:layout_below="@+id/textView_li_nom_2"
        android:background="@drawable/my_textedit_style"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_li_me_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_PA_PC"
        android:layout_below="@+id/editText_PA_PC"
        android:layout_marginTop="16dp"
        android:text="@string/peso_ideal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_PI_PC"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView_li_me_3"
        android:layout_below="@+id/textView_li_me_3"
        android:background="@drawable/my_textedit_style"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0" />

    <TextView
        android:id="@+id/textView_li_nom_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText_PA_PC"
        android:layout_alignBottom="@+id/editText_PA_PC"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/editText_Resultado_PC"
        android:text="@string/kg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_li_can_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText_PI_PC"
        android:layout_alignBottom="@+id/editText_PI_PC"
        android:layout_alignLeft="@+id/textView_li_nom_3"
        android:text="@string/kg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_Resultado_PC"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/editText_PI_PC"
        android:layout_below="@+id/buttonCalcular"
        android:layout_marginTop="26dp"
        android:background="@drawable/my_textedit_style"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_PI_PC"
        android:layout_alignRight="@+id/editText_Resultado_PC"
        android:layout_below="@+id/editText_PI_PC"
        android:layout_marginTop="34dp"
        android:background="@drawable/button_selector"
        android:onClick="calcularPesoCorregido"
        android:text="@string/calcular"
        android:textColor="@color/list_item_title" />

</RelativeLayout>
