<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_geb_eta" />

    <TextView
        android:id="@+id/textView_al_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/eta"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_li_nom_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="30dp"
        android:text="@string/gasto_energetico_basal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_GEB_GEBETA"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView_li_nom_2"
        android:layout_below="@+id/textView_li_nom_2"
        android:background="@drawable/my_textedit_style"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_li_can_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_GEB_GEBETA"
        android:layout_below="@+id/editText_GEB_GEBETA"
        android:layout_marginTop="14dp"
        android:text="@string/eta"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_ETA_GBAETA"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView_li_can_3"
        android:layout_below="@+id/textView_li_can_3"
        android:background="@drawable/my_textedit_style"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0" />

    <EditText
        android:id="@+id/editText_Resultado_GEBETA"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/editText_ETA_GBAETA"
        android:layout_below="@+id/button1"
        android:layout_marginTop="28dp"
        android:background="@drawable/my_textedit_style"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_Resultado_GEBETA"
        android:layout_alignRight="@+id/editText_Resultado_GEBETA"
        android:layout_below="@+id/editText_ETA_GBAETA"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_selector"
        android:text="@string/calcular"
        android:textColor="@color/list_item_title"
        android:onClick="calcularGEBETA" />

    <TextView
        android:id="@+id/textView_li_me_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText_ETA_GBAETA"
        android:layout_alignBottom="@+id/editText_ETA_GBAETA"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/editText_ETA_GBAETA"
        android:text="@string/porcentaje"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
